# bo-python

./: .gitignore  .pre-commit-config.yaml  .travis.yml  AGENTS.md  COPYING  ChangeLog  Clustering.ipynb  LICENSE  README  README.md  blitzortung-python.wpr  junit.xml  mypy.ini  pylint.rc  pylint_report.txt  pylint_report_2.txt  pylint_report_3.txt  pyproject.toml  requirements.in  requirements.txt  requirements_tests.txt  server.py  setup.cfg  setup.py  sonar-project.properties  test.py  update_requirements
.github/workflows/: build.yml  codeql.yml  dependabot.yml  dependency-review.yml  scorecards.yml
blitzortung/: __init__.py  base.py  blitzortung.py  builder.py  cache.py  calc.py  clustering.py  config.py  convert.py  data.py  dataimport.py  db.py  db_spatialite.py  files.py  geom.py  lock.py  logger.py  plot.py  test.py  test2.py  typedef.py  types.py  util.py  web.py  websocket.py
blitzortung/builder/: __init__.py  base.py  raw_signal.py  station.py  strike.py  strike_cluster.py
blitzortung/cli/: db.py  imprt.py  imprt2.py  imprt_websocket.py  start_webservice.py  update.py  webservice.py  webservice_insertlog.py
blitzortung/clustering/: .gitignore  __init__.py  base.py  pdist.pyx
blitzortung/console/: db.py  import.py
blitzortung/dataimport/: __init__.py  base.py  raw_signal.py  station.py  strike.py
blitzortung/db/: __init__.py  compat.py  grid_result.py  mapper.py  query.py  query_builder.py  table.py
blitzortung/gis/: constants.py  local_grid.py
blitzortung/service/: __init__.py  base.py  cache.py  db.py  general.py  histogram.py  metrics.py  strike.py  strike_grid.py
debian/: README  README.Debian  changelog  control  copyright  files  rules
doc/: Makefile  blitzortung.db.rst  blitzortung.rst  conf.py  index.rst  modules.rst
reports/: coverage.xml
tests/: conftest.py  test_base.py  test_blitzortung_data.py  test_builder.py  test_cache.py  test_calc.py  test_clustering.py  test_config.py  test_convert.py  test_data.py  test_data_benchmark.py  test_dataimport.py  test_db.py  test_db_query.py  test_db_query_builder.py  test_db_table.py  test_geom.py  test_lock.py  test_logger.py  test_plot.py  test_types.py  test_util.py  test_web.py  test_websocket.py
tests/builder/: test_builder_base.py  test_builder_strike.py
tests/cli/: test_db.py  test_imprt.py  test_imprt2.py  test_imprt_websocket.py  test_update.py  test_webservice.py  test_webservice_insertlog.py
tests/dataimport/: test_dataimport_base.py  test_dataimport_init.py
tests/db/: conftest.py  test_db.py  test_db_grid_result.py  test_db_init.py  test_db_mapper.py  test_db_query.py  test_db_query_builder.py  test_db_table.py
tests/gis/: test_local_grid.py
tests/service/: test_base.py  test_general.py  test_histogram.py  test_metrics.py  test_service_db.py  test_service_init.py  test_strike_grid.py  test_strikes.py
