[project]
name = 'blitzortung'
version = '1.10.1'
description = 'blitzortung.org python modules'
authors = [
    {name = "Andreas Würl",email = "andi@tryb.de"}
]
license = "Apache-2.0"
homepage = 'https://github.com/wuan/bo-python'
requires-python = ">=3.11,<4.0"
dependencies = [
    "twisted (>=23.10.0,<24.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "fasteners (>=0.19,<0.20)",
    "shapely (>=2.0.6,<3.0.0)",
    "pyproj (>=3.7.0,<4.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "injector (>=0.22.0,<0.23.0)",
    "incremental (==22.10.0)"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
pytest-benchmark = "^5.1.0"
mock = "^5.1.0"
assertpy = "^1.1"
testcontainers = {extras = ["postgres"], version = "^4.10.0"}
