[project]
name = 'blitzortung'
version = '1.11.28'
description = 'blitzortung.org python modules'
authors = [
    {name = "Andreas Würl",email = "andi@tryb.de"}
]
license = "Apache-2.0"
homepage = 'https://github.com/wuan/bo-python'
requires-python = ">=3.11,<4.0"
dependencies = [
    "twisted (>=25.5)",
    "requests (>=2.32)",
    "fasteners (>=0.19)",
    "shapely (>=2.0)",
    "pyproj (>=3.7)",
    "psycopg2 (>=2.9)",
    "injector (>=0.22)",
    "incremental (>=22.10)",
    "stopit (>=1.1)",
    "websocket-client (>=1.9)",
    "psycopg2cffi (>=2.9)",
    "statsd (>=4.0)",
    "geoip2 (>=5.1)",
    "txpostgres (>=1.7)",
    "txjsonrpc-ng (>=0.8)",
]

[project.scripts]
bo-db = "blitzortung.cli.db:main"
bo-import = "blitzortung.cli.imprt:main"
bo-update = "blitzortung.cli.update:main"
bo-import-websocket = "blitzortung.cli.imprt_websocket:main"
bo-webservice = "blitzortung.cli.start_webservice:main"
bo-webservice-insertlog = "blitzortung.cli.webservice_insertlog:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-cov = "^6.0"
pytest-benchmark = "^5.1"
mock = "^5.1"
assertpy = "^1.1"
testcontainers = {extras = ["postgres"], version = "^4.10"}
pytest-twisted = "^1.14.3"
